--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "ts:check": "tsc"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
     "expo": "~49.0.8",
+    "expo-navigation-bar": "~2.3.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
