--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
-    "expo": "~49.0.8",
+    "expo": "^49.0.11",
     "expo-navigation-bar": "~2.3.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4",
-    "react-native-gesture-handler": "^2.12.1"
+    "react-native": "0.72.5",
+    "react-native-gesture-handler": "~2.12.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
+    "@babel/core": "^7.23.0",
+    "@types/react": "^18.2.23",
     "typescript": "^5.1.3"
   },
   "private": true
